WIP on promotion, add boolean formula logic